# wintermute-presence

./: CHANGELOG.md  Cargo.toml  README.md  clippy.toml  deny.toml  wm-presence.service
.github/workflows/: ci.yml
agent/: AUTOBUILDER_PROGRAM.md  intent-card.json  owner-map.json  proof-lanes.toml  test-map.json
src/: config.rs  daemon.rs  events.rs  hearing.rs  lib.rs  main.rs  silence.rs  state.rs  status.rs
tests/: acceptance_ac1.rs  acceptance_ac10.rs  acceptance_ac11.rs  acceptance_ac2.rs  acceptance_ac3.rs  acceptance_ac4.rs  acceptance_ac5.rs  acceptance_ac6.rs  acceptance_ac7.rs  acceptance_ac8.rs  acceptance_ac9.rs  hearing_ac4_persistence.rs  hearing_ac5_disabled.rs  hearing_ac6_window.rs  proptest_invariants.rs
